# NavHAL

./: .clangd  .config  .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Doxyfile  Kconfig  LICENSE.md  README.md  line_count.sh  mainpage.md
.githooks/: commit-msg  pre-commit  pre-push
.github/workflows/: ci.yml  release-gate.yml  renode.yml  semver-gate.yml  stable-ci.yml  static.yml
cmake/arch/: armv7e-m.cmake  avr.cmake
cmake/defconfigs/: avr_atmega328p.defconfig  cortex-m4_stm32f4_nucleo_f401re.defconfig  cortex-m7_stm32f7_nucleo_f767zi.defconfig
docs/: MODULE_ABI.md  _groups.dox  api_standardization.md  execution_plan.md  m2_plus_plan.md  m5_avr_readiness_review.md  m5_conformance_audit.md  main.tex  naming_conventions.md  stm32f767zi_port_plan.md  testing.md
docs/latex/: annotated.tex  (+366 more)
include/: navhal.h
samples/: CMakeLists.txt  Kconfig  README.md
samples/00_test_sample/: CMakeLists.txt  main.c
samples/01_hal_blink/: CMakeLists.txt  main.c
samples/01_no_hal_blink/: CMakeLists.txt  Makefile  main.c
samples/02_hal_pupd/: CMakeLists.txt  main.c
samples/03_hal_uart_tx/: main.c
samples/03_no_hal_uart_tx/: main.c
samples/04_hal_timer/: main.c
samples/05_hal_systick/: CMakeLists.txt  main.c  startup.s
samples/06_hal_blink_delay/: main.c
samples/07_hal_pwm/: main.c
samples/08_no_hal_pwm/: CMakeLists.txt
samples/09_clock/: main.c
samples/09_hal_clock/: main.c
samples/10_no_hal_i2c/: CMakeLists.txt  main.c
samples/11_hal_i2c/: main.c
samples/12_no_hal_flash/: main.c
samples/13_hal_flash/: main.c
samples/14_hal_uart_int/: main.c
samples/15_hal_uart_dma/: main.c
samples/16_hal_dma_polling_uart/: main.c
samples/17_hal_fpu/: CMakeLists.txt  main.c
samples/18_hal_crc/: CMakeLists.txt  main.c
samples/19_hal_dma_i2c/: CMakeLists.txt  main.c
samples/20_hal_sdio/: CMakeLists.txt  main.c
samples/21_hal_sdio_block/: CMakeLists.txt  main.c
samples/22_hal_fatfs_posix/: CMakeLists.txt  main.c
samples/23_hal_sdio_perf/: CMakeLists.txt  main.c
samples/24_hal_uart_dma_bridge/: main.c
samples/25_hal_spi_esp_bridge/: CMakeLists.txt  main.c
samples/26_hal_dwt/: CMakeLists.txt  main.c
samples/27_hal_blink_cpp/: CMakeLists.txt  main.cpp
samples/blink/: main.c  startup.s
samples/cortex-m/05_hal_systick/: main.c
samples/cortex-m/09_hal_clock/: main.c
samples/cortex-m/15_hal_uart_dma/: main.c
samples/cortex-m/16_hal_dma_polling_uart/: main.c
samples/cortex-m/17_hal_fpu/: main.c
samples/cortex-m/19_hal_dma_i2c/: main.c
samples/cortex-m/20_hal_sdio/: main.c
samples/cortex-m/21_hal_sdio_block/: main.c
samples/cortex-m/22_hal_fatfs_posix/: main.c
samples/cortex-m/23_hal_sdio_perf/: main.c
samples/cortex-m/24_hal_uart_dma_bridge/: main.c
samples/cortex-m/26_hal_dwt/: main.c
samples/no_hal/01_no_hal_blink/: main.c  startup.s
samples/no_hal/03_no_hal_uart_tx/: main.c
samples/no_hal/08_no_hal_pwm/: main.c  startup.s
samples/no_hal/10_no_hal_i2c/: main.c  startup.s
samples/no_hal/12_no_hal_flash/: main.c
samples/portable/01_hal_blink/: CMakeLists.txt  main.c
samples/portable/02_hal_pupd/: main.c
samples/portable/03_hal_uart_tx/: main.c
samples/portable/04_hal_timer/: main.c
samples/portable/06_hal_blink_delay/: main.c
samples/portable/07_hal_pwm/: main.c
samples/portable/11_hal_i2c/: main.c
samples/portable/13_hal_flash/: main.c
samples/portable/14_hal_uart_int/: main.c
samples/portable/18_hal_crc/: CMakeLists.txt  main.c
samples/portable/25_hal_spi_esp_bridge/: main.c
samples/portable/27_hal_blink_cpp/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  conversion.c  util.c
src/arch/armv7e-m/: Kconfig  Kconfig.choice  Kconfig.features
src/arch/armv7e-m/dwt/: dwt.c
src/arch/armv7e-m/fpu/: fpu.c
src/arch/armv7e-m/interrupt/: interrupt.c
src/arch/armv7e-m/startup/: startup.s
src/arch/armv7e-m/timebase/: timebase.c
src/arch/avr/: Kconfig  Kconfig.choice
src/arch/avr/interrupt/: interrupt.c
src/board/atmega328p/: Kconfig  Kconfig.choice  board.h
src/board/nucleo_f401re/: Kconfig  Kconfig.choice  board.h  linker.ld
src/board/nucleo_f767zi/: Kconfig  Kconfig.choice  board.h  linker.ld  startup.s
src/common/: hal_gpio.c
src/core/: CMakeLists.txt
src/core/cortex-m4/: CMakeLists.txt
src/core/cortex-m4/clock/: clock.c
src/core/cortex-m4/crc/: crc.c
src/core/cortex-m4/dma/: dma.c
src/core/cortex-m4/dwt/: dwt.c
src/core/cortex-m4/flash/: flash.c
src/core/cortex-m4/fpu/: fpu.c  hal_fpu.c
src/core/cortex-m4/gpio/: gpio.c
src/core/cortex-m4/i2c/: i2c.c
src/core/cortex-m4/interrupt/: interrupt.c
src/core/cortex-m4/pwm/: pwm.c
src/core/cortex-m4/sdio/: diskio.c  sdio.c
src/core/cortex-m4/spi/: spi.c
src/core/cortex-m4/startup/: startup.c  startup.s
src/core/cortex-m4/timer/: timer.c
src/core/cortex-m4/uart/: uart.c
src/utils/: conversion.c  util.c  v_fs.c
src/utils/fatfs/: diskio.c  diskio.h  ff.c  ff.h  ffconf.h
tests/: main.c  navtest_state.c  navtest_target.h  stubs.c  test_clock.c  test_clock.h  test_crc.c  test_crc.h  test_dma.c  test_dma.h  test_dwt.c  test_dwt.h  test_flash_raw.c  test_flash_raw.h  test_fpu_accel.c  test_fpu_accel.h  test_gpio.c  test_gpio.h  test_i2c.c  test_i2c.h  test_interrupt.c  test_interrupt.h  test_pwm.c  test_pwm.h  test_sdio.c  test_sdio.h  test_spi.c  test_spi.h  test_timebase.c  test_timebase.h  test_timer.c  test_timer.h  test_uart_protocol.c  test_uart_protocol.h
tests/host/: CMakeLists.txt  host_backend.c  host_mmio.c  host_mmio.h  host_stubs.c  main.c  main_drivers.c  navhal_target.h  test_clock_driver.c  test_conversion.c  test_conversion.h  test_crc_sw.c  test_crc_sw.h  test_flash_driver.c  test_gpio_driver.c  test_gpio_driver.h  test_gpio_encoding.c  test_gpio_encoding.h  test_hal_status.c  test_hal_status.h  test_i2c_driver.c  test_spi_driver.c  test_uart_driver.c
tools/: build_all_avr_samples.sh  build_all_f767_samples.sh  build_all_samples.sh  flash.sh  install-hooks.sh  kconfig.py  lint_commits.sh  run_host_tests.sh  test_cap_contract.sh
utils/: uart_plotter.py
(+1140 files in other folders)
